# Vaani

./: .gitignore  readme.md
Scripts/: .gitignore  config.py  pyproject.toml  run_ingestion.py  run_scrape.py
backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GRPC_FRONTEND_MIGRATION.md  audio_cache.py  audio_utils.py  config.py  constants.py  datasets.py  datasets_router.py  grpc_adapter.py  grpc_server.py  grpc_servicer.py  human_session.py  init_db.py  llm.py  llm_pipeline.py  logger.py  logs_router.py  main.py  notes.md  prompts.py  pyproject.toml  requirements.txt  run.py  session.py  session_broadcaster.py  session_registry.py  sessions_router.py
backend/ai_services/: __init__.py  departments.py  dialogue.py  dialogue_flow.py  knowledge_base.py  llm.py  llm_client.py  prompts.py  retrieval.py  schemas.py
backend/ai_services/stt_tts/: __init__.py  base.py  sarvam.py
backend/audio/: __init__.py  audio_cache.py  cache.py  phrases.py  utils.py
backend/database/: __init__.py  engine.py  models.py  save.py  save_fn.py
backend/loggers/: __init__.py  broadcaster.py  entities.py  logger.py
backend/logging_module/: logger.py
backend/proto/: vaani.proto  vaani_pb2.py  vaani_pb2_grpc.py
backend/routers/: __init__.py  auth.py  call.py  datasets.py  departments.py  logs.py  router_call.py  router_logs.py  router_sessions.py  sessions.py  tickets.py  users.py
backend/services/: retrieval.py
backend/sessions/: __init__.py  broadcaster.py  human.py  human_session.py  session.py
frontend/: CLAUDE.md  next.config.ts  package.json  pnpm-lock.yaml
(+61 files in other folders)
